Mon Jun 21 19:45:44 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/WaitForAck/WaitForAck.mpc:

          Corrected dependencies (after += ...)

Mon Jun 21 17:47:44 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "sbir_n08_116", which includes changes for spec
          compliance.  See docs/history/ChangeLog-sbir_n08_116 for details.
          Major features added are:

          - Content-Subscription Profile: implemented ContentFilteredTopic and
            the remaining functionality for QueryCondition
          - QoS: OWNERSHIP; PRESENTATION (access_scope = GROUP)

          The Content-Subscription Profile implementation required a change to
          OpenDDS's strategy for code-generation.  OpenDDS-specific code has
          been moved out of tao_idl's back-end library (enabled with -Gdcps)
          and into a code generator here in the OpenDDS repository, called
          opendds_idl (in dds/idl).  Existing applications that use MPC should
          only need to change one of the arguments which may appear in
          dcps_ts_flags: '--export=' has become '-Wb,export_macro='.
          Also, note that for footprint-sensitive applications, the content-
          subscription profile can be disabled at compile-time by setting the
          MPC feature content_subscription=0.

Fri Jun 18 22:42:30 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/AssociationData.h:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/PriorityKey.h:
        * dds/DCPS/transport/framework/PriorityKey.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastReceiveStrategy.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.h: